# stm32f303-project-template

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
